View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025532 | Open CASCADE | OCCT:Visualization | public | 2014-11-28 12:25 | 2015-05-14 15:32 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | high | Severity | major | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.8.0 | ||||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025532: Visualization - fix cross-references between AIS_ConnectedInteractive and connected presentation | ||||
Description | The memory is not released after AIS_Interactive_Context::RemoveAll(). | ||||
Steps To Reproduce | pload MODELING VISUALIZATION psphere s 0.5 tclean s incmesh s 0.001 trinfo s vinit View1 vclear vaxo vcaps -vbo 0 vsetdispmode 1 vdefaults absDefl=1.0 set aMemInit [meminfo h] set aNb 1000 # display as copies eval compound [lrepeat $aNb s] ss explode ss for {set i 1} {$i <= $aNb} {incr i} { vdisplay -noupdate ss_${i}; vsetlocation -noupdate ss_${i} 0 0 s } vfit set aMemDisp1 [meminfo h] vclear set aMemClear1 [meminfo h] # display as connected instances of single presentation vconnectto i_1 0 0 0 s for {set i 2} {$i < $aNb} {incr i} { vconnectto i_${i} ${i} 0 0 i_1 } set aMemDisp2 [meminfo h] vclear set aMemClear2 [meminfo h] puts "Initial memory: [expr $aMemInit / (1024 * 1024)] MiB" puts "Displaying (simple): [expr $aMemDisp1 / (1024 * 1024)] MiB" puts "Clearing (simple): [expr $aMemClear1 / (1024 * 1024)] MiB" puts "Displaying (connected): [expr $aMemDisp2 / (1024 * 1024)] MiB" puts "Clearing (connected): [expr $aMemClear2 / (1024 * 1024)] MiB" Expected results: "Clearing (connected)" should release memory, but it is almost the same as "Displaying (connected)" Actual results: Initial memory: 3 MiB Displaying (simple): 265 MiB Clearing (simple): 5 MiB Displaying (connected): 90 MiB Clearing (connected): 85 MiB | ||||
Tags | No tags attached. | ||||
Test case number | bugs vis(004) bug25532 | ||||
|
Branch CR25532 has been created by kgv. SHA-1: 2a87f31657df995477451ca814945bcefbc7bdac Detailed log of new commits: Author: kgv Date: Fri Nov 28 14:48:03 2014 +0300 0025532: Visualization - fix cross-references between AIS_ConnectedInteractive and connected presentation |
|
Branch CR25532_1 has been created by dbp. SHA-1: 8f6a57de1c7929f8d810cb4e1dc9be88c594dd28 Detailed log of new commits: Author: dbp Date: Tue Dec 23 12:54:33 2014 +0300 0025532: Visualization - fix cross-references between AIS_ConnectedInteractive and connected presentation |
|
Dear kgv, please review the patch in branch CR25532_1. |
|
Please test the patch. |
|
Dear BugMaster, Branch CR25532_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 8f6a57de1c7929f8d810cb4e1dc9be88c594dd28 Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 11 (11 on master) Windows: 1 (1 on master) Regressions/Differences: No regressions/differences Testing cases: Testing on Linux: occt component : Total MEMORY difference: 367916608 / 367984712 Total CPU difference: 50263.850000000195 / 51491.980000000156 products component : Total MEMORY difference: 110090620 / 110345408 Total CPU difference: 15714.949999999977 / 16409.06999999999 Testing on Windows: occt component : Total MEMORY difference: 277446044 / 277277864 Total CPU difference: 36214.046875 / 37472.0935757 products component : Total MEMORY difference: 72160308 / 71382268 Total CPU difference: 11212.796875 / 10342.656534399997 There are following differences in images found by testdiff. http://occt-tests.nnov.opencascade.com/CR25532-1-master-occt/Debian60-64/diff-Debian60-64.html http://occt-tests.nnov.opencascade.com/CR25532-1-master-occt/Windows-32-VC10/diff-Windows-32-VC10.html IMAGE bugs vis bug24756: bug24756.png differs |
|
Branch CR25532_1 has been updated by dbp. SHA-1: f014bd49c96a614ee4d704dd0a663b5b41a89955 Detailed log of new commits: Author: dbp Date: Fri Dec 26 13:00:21 2014 +0300 New test case added. |
|
Dear kgv, could you please review test case in branch CR25532_1? |
|
Please note that behavior in test case "bugs vis bug24756" has changed. The difference detected during testing is OK. See http://occt-tests.nnov.opencascade.com/CR25532-1-master-occt/Windows-32-VC10/diff-Windows-32-VC10.html |
|
OK, please check test case and integrate. |
|
Testing cases: http://occt-tests.nnov.opencascade.com/CR25532-1-master-occt/Debian60-64/bugs/vis/bug25532.html http://occt-tests.nnov.opencascade.com/CR25532-1-master-occt/Windows-32-VC10/bugs/vis/bug25532.html bugs vis(004) bug25532: OK Branch CR25532_1 is TESTED. |
|
Branch CR25532_1 has been deleted by inv. SHA-1: f014bd49c96a614ee4d704dd0a663b5b41a89955 |
|
Branch CR25532 has been deleted by inv. SHA-1: 2a87f31657df995477451ca814945bcefbc7bdac |
occt: master c8be748c 2015-01-15 11:37:12
Committer: bugmaster Details Diff |
0025532: Visualization - fix cross-references between AIS_ConnectedInteractive and connected presentation New test case added. |
Affected Issues 0025532 |
|
mod - src/AIS/AIS_ConnectedInteractive.cxx | Diff File | ||
add - tests/bugs/vis/bug25532 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-11-28 12:25 | kgv | New Issue | |
2014-11-28 12:25 | kgv | Assigned To | => kgv |
2014-11-28 12:26 | kgv | Steps to Reproduce Updated | |
2014-11-28 12:26 | kgv | Relationship added | related to 0024837 |
2014-11-28 12:28 | kgv | Steps to Reproduce Updated | |
2014-11-28 12:32 | kgv | Steps to Reproduce Updated | |
2014-11-28 14:47 | kgv | Summary | Visualization - connected interactive objects do not release the memory after context clean-up => Visualization - fix cross-references between AIS_ConnectedInteractive and connected presentation |
2014-11-28 14:48 | git | Note Added: 0034832 | |
2014-11-28 15:30 | kgv | Steps to Reproduce Updated | |
2014-11-28 15:32 | kgv | Assigned To | kgv => duv |
2014-11-28 15:33 | kgv | Assigned To | duv => apl |
2014-11-28 15:33 | kgv | Priority | normal => high |
2014-11-28 15:33 | kgv | Status | new => assigned |
2014-12-23 08:53 | kgv | Assigned To | apl => dbp |
2014-12-23 12:59 | git | Note Added: 0035591 | |
2014-12-23 13:03 |
|
Note Added: 0035592 | |
2014-12-23 13:03 |
|
Assigned To | dbp => kgv |
2014-12-23 13:03 |
|
Status | assigned => resolved |
2014-12-23 20:20 | kgv | Note Added: 0035629 | |
2014-12-23 20:20 | kgv | Assigned To | kgv => bugmaster |
2014-12-23 20:20 | kgv | Status | resolved => reviewed |
2014-12-23 20:20 | kgv | Product Version | => 6.8.0 |
2014-12-23 20:20 | kgv | Target Version | 7.1.0 => 6.9.0 |
2014-12-24 11:18 |
|
Assigned To | bugmaster => mkv |
2014-12-25 15:45 |
|
Note Added: 0035723 | |
2014-12-25 15:45 |
|
Assigned To | mkv => dbp |
2014-12-25 15:45 |
|
Status | reviewed => assigned |
2014-12-26 13:01 | git | Note Added: 0035748 | |
2014-12-26 13:02 |
|
Note Added: 0035749 | |
2014-12-26 13:02 |
|
Assigned To | dbp => kgv |
2014-12-26 13:02 |
|
Status | assigned => resolved |
2014-12-26 13:04 |
|
Note Added: 0035750 | |
2014-12-26 15:01 | kgv | Note Added: 0035758 | |
2014-12-26 15:01 | kgv | Assigned To | kgv => bugmaster |
2014-12-26 15:01 | kgv | Status | resolved => reviewed |
2014-12-26 16:37 |
|
Assigned To | bugmaster => mkv |
2014-12-29 16:51 |
|
Note Added: 0035840 | |
2014-12-29 16:51 |
|
Assigned To | mkv => bugmaster |
2014-12-29 16:51 |
|
Status | reviewed => tested |
2014-12-29 16:51 |
|
Test case number | => bugs vis(004) bug25532 |
2015-01-16 13:37 | bugmaster | Changeset attached | => occt master c8be748c |
2015-01-16 13:37 | bugmaster | Status | tested => verified |
2015-01-16 13:37 | bugmaster | Resolution | open => fixed |
2015-01-26 12:33 | git | Note Added: 0036544 | |
2015-01-26 12:37 | git | Note Added: 0036609 | |
2015-05-14 15:29 |
|
Status | verified => closed |
2015-05-14 15:32 |
|
Fixed in Version | => 6.9.0 |