0025532: Visualization - fix cross-references between AIS_ConnectedInteractive and connected presentation

New test case added.